ck_log.txt
Python 3.7.4 (default, Aug  9 2019, 18:34:13) [MSC v.1915 64 bit (AMD64)]
Type "copyright", "credits" or "license" for more information.

IPython 7.8.0 -- An enhanced Interactive Python.

w=[1,1,1,2,2,3]

from collections import Counter

wc=Counter(w)

a=wc.most_common(2)

a
Out[5]: [(1, 3), (2, 2)]

wc.update()

wc
Out[7]: Counter({1: 3, 2: 2, 3: 1})

class User:
    def_init_(self,user_id)
    self.user_id=user_id
    def  _repr_(self):
        return 'User({})'.format(self.user_id)
        
Traceback (most recent call last):

  File "<ipython-input-8-c8b9ca250f7c>", line 1, in <module>
    class User:

  File "<ipython-input-8-c8b9ca250f7c>", line 2, in User
    def_init_(self,user_id)

NameError: name 'def_init_' is not defined




class User:
    def__init__(self,user_id)
    self.user_id=user_id
    def  __repr__(self):
        return 'User({})'.format(self.user_id)
        
Traceback (most recent call last):

  File "<ipython-input-9-7cd6e6810379>", line 1, in <module>
    class User:

  File "<ipython-input-9-7cd6e6810379>", line 2, in User
    def__init__(self,user_id)

NameError: name 'def__init__' is not defined




class User:
    def __init__(self,user_id)
    self.user_id=user_id
    def  __repr__(self):
        return 'User({})'.format(self.user_id)
  File "<ipython-input-10-894c834986f6>", line 2
    def __init__(self,user_id)
                              ^
SyntaxError: invalid syntax




class User:
    def __init__(self,user_id):
        self.user_id=user_id
    def  __repr__(self):
        return 'User({})'.format(self.user_id)
        

users=[User(23),user(3),User(99)]
Traceback (most recent call last):

  File "<ipython-input-12-7645bd143d45>", line 1, in <module>
    users=[User(23),user(3),User(99)]

NameError: name 'user' is not defined




users=[User(23),User(3),User(99)]

sorted(users,key=lambda u: u,user_id)
  File "<ipython-input-14-5c8fe9ed8fad>", line 1
    sorted(users,key=lambda u: u,user_id)
                                ^
SyntaxError: positional argument follows keyword argument




sorted(users,key=lambda u: u.user_id)
Out[15]: [User(3), User(23), User(99)]

from operator import attrgetter

sorted(users,key=attrgetter('user_id'))
Out[17]: [User(3), User(23), User(99)]

min(user,key=attrgetter('user_name'))
Traceback (most recent call last):

  File "<ipython-input-18-9a9e70eb7113>", line 1, in <module>
    min(user,key=attrgetter('user_name'))

NameError: name 'user' is not defined




min(usesr,key=attrgetter('user_name'))
Traceback (most recent call last):

  File "<ipython-input-19-f83322a96f15>", line 1, in <module>
    min(usesr,key=attrgetter('user_name'))

NameError: name 'usesr' is not defined




min(users,key=attrgetter('user_name'))
Traceback (most recent call last):

  File "<ipython-input-20-2de890a3f6ee>", line 1, in <module>
    min(users,key=attrgetter('user_name'))

AttributeError: 'User' object has no attribute 'user_name'




min(users,key=attrgetter('user_id'))
Out[21]: User(3)

man(users,key=attrgetter('user_id'))
Traceback (most recent call last):

  File "<ipython-input-22-95390105d206>", line 1, in <module>
    man(users,key=attrgetter('user_id'))

NameError: name 'man' is not defined




max(users,key=attrgetter('user_id'))
Out[23]: User(99)

rows=[
{'address':'5412 CLARK','date':'07/01/2012'},
{'address':'1412 CLARK','date':'07/01/2016'},
{'address':'2412 CLARK','date':'07/01/2019'}]

from operator import itemgetter

from itertools import groupby

row.sort(key=itemgetter('data'))
Traceback (most recent call last):

  File "<ipython-input-27-ffe702f8eb0d>", line 1, in <module>
    row.sort(key=itemgetter('data'))

NameError: name 'row' is not defined




rows.sort(key=itemgetter('data'))
Traceback (most recent call last):

  File "<ipython-input-28-ded3f87680e0>", line 1, in <module>
    rows.sort(key=itemgetter('data'))

KeyError: 'data'




rows.sort(key=itemgetter('date'))

rows
Out[30]: 
[{'address': '5412 CLARK', 'date': '07/01/2012'},
 {'address': '1412 CLARK', 'date': '07/01/2016'},
 {'address': '2412 CLARK', 'date': '07/01/2019'}]

from date,items in groupby(rows,key=itemgetter('date')):
    print(date)
  File "<ipython-input-31-ded8b3e4eaf1>", line 1
    from date,items in groupby(rows,key=itemgetter('date')):
             ^
SyntaxError: invalid syntax




from date,items in groupby(rows,key=itemgetter('date')):
    print(date)/
  File "<ipython-input-32-4dd3b05cfc92>", line 1
    from date,items in groupby(rows,key=itemgetter('date')):
             ^
SyntaxError: invalid syntax




from date,items in groupby(rows,key=itemgetter('date'))
    print(date)\
    for i in items:
        print('  ',i)
  File "<ipython-input-33-e9dafca7d617>", line 1
    from date,items in groupby(rows,key=itemgetter('date'))
             ^
SyntaxError: invalid syntax




from date,items in groupby(rows ,key=itemgetter('date'))
    print(date)\ 
    for i in items:
        print('  ',i)
  File "<ipython-input-34-d2edb808cae3>", line 1
    from date,items in groupby(rows ,key=itemgetter('date'))
             ^
SyntaxError: invalid syntax




runfile('C:/Users/16476/untitled0.py', wdir='C:/Users/16476')
Traceback (most recent call last):

  File "d:\Users\16476\Anaconda3\lib\site-packages\IPython\core\interactiveshell.py", line 3326, in run_code
    exec(code_obj, self.user_global_ns, self.user_ns)

  File "<ipython-input-35-a188ba00e4e9>", line 1, in <module>
    runfile('C:/Users/16476/untitled0.py', wdir='C:/Users/16476')

  File "d:\Users\16476\Anaconda3\lib\site-packages\spyder_kernels\customize\spydercustomize.py", line 827, in runfile
    execfile(filename, namespace)

  File "d:\Users\16476\Anaconda3\lib\site-packages\spyder_kernels\customize\spydercustomize.py", line 110, in execfile
    exec(compile(f.read(), filename, 'exec'), namespace)

  File "C:/Users/16476/untitled0.py", line 9
    print('  ',i)
                 
^
SyntaxError: EOF while scanning triple-quoted string literal




from date,items in groupby(rows ,key=itemgetter('date')):
    print(date)\ 
    for i in items:
        print('  ',i)
  File "<ipython-input-36-665a94da095b>", line 1
    from date,items in groupby(rows ,key=itemgetter('date')):
             ^
SyntaxError: invalid syntax




from date,items in groupby(rows,key=itemgetter('date')):
    print(date)\
    for i in items:
        print('  ',i)
  File "<ipython-input-37-98ac19b98562>", line 1
    from date,items in groupby(rows,key=itemgetter('date')):
             ^
SyntaxError: invalid syntax




for date,items in groupby(rows,key=itemgetter('date')):
    print(date)\
    for i in items:
        print('  ',i)
  File "<ipython-input-38-043ef2cbeca1>", line 3
    for i in items:
      ^
SyntaxError: invalid syntax




for date,items in groupby(rows,key=itemgetter('date')):
    print(date)
    for i in items:
        print('  ',i) 
        
07/01/2012
   {'address': '5412 CLARK', 'date': '07/01/2012'}
07/01/2016
   {'address': '1412 CLARK', 'date': '07/01/2016'}
07/01/2019
   {'address': '2412 CLARK', 'date': '07/01/2019'}